--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'NC'
 - !lcsh 'Du Maurier, George, 1834-1896'
 - !lcc 'PR'
+- GITenberg
 title: George Du Maurier, the Satirist of the Victorians
 url: http://www.gutenberg.org/ebooks/14392
